# smart-assistant-backend

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0b972a1118da_create_interview_kits_table.py  146e0317e533_create_email_templates_table.py  189bbbe68063_create_documents_table.py  1ab5f21411f2_create_candidate_reviews_table.py  1c2e42aa7a85_create_candidate_job_matches_table.py  215d0a0f4418_create_messages_table.py  21a5fa405085_add_approval_request_updated_audit_event.py  21f6767f67f8_create_candidate_workflows_table.py  25144525b9a6_add_approval_updated_audit_event.py  37e3addfc765_add_extracted_text_to_documents.py  4a79d41a8d14_add_failed_outbox_status.py  4c032b7d4c36_add_candidate_review_audit_event.py  57b901b473c5_add_approval_request_updated_audit_event.py  5c008ad37c17_enable_pgvector_extension.py  6af58c2fecbc_create_messages_table.py  6d5901d34e97_create_outbox_messages_table.py  75df4fa48ad8_create_document_chunks_table.py  7b9f5e44312a_create_documents_table.py  824e8de7abcd_create_approval_requests_table.py  85ddd6f9e50e_create_candidates_table.py  94bbc48578c4_create_documents_table.py  9d70ccca7dee_add_embedding_to_document_chunks.py  c0b1bd7fbe18_create_documents_table.py  c68abf217f61_create_tool_calls_table.py  c8612488a8ad_add_candidate_workflow_audit_event.py  c9703ae52b96_create_agent_runs_table.py  dee5540be950_create_conversations_table.py  ef74cd89bb17_create_audit_logs_table.py  f338194bf74b_create_outbox_messages_table.py  fbffc9661887_add_execution_result_to_approval_.py
app/: main.py
app/agents/: graph.py  intents.py  nodes.py  registry.py  state.py  supervisor.py
app/api/: deps.py
example_data/: audit-doc.txt  policy-search.txt  qa-intern-jd.txt  review-cv.txt  sample-cv.txt  sample-policy-long.txt  sample-policy-vector.txt  sample-policy.txt
(+113 files in other folders)
