[project]
name = "smart-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for a local agentic AI assistant with LangGraph, RAG, approvals, and audit logs."
authors = [
    { name = "Thinura Kumarasinghe", email = "thinuralaksara@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",

    "pydantic (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",

    "sqlalchemy (>=2.0.0,<3.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "psycopg[binary] (>=3.2.0,<4.0.0)",

    "redis (>=5.0.0,<7.0.0)",

    "langchain (>=1.2.15,<2.0.0)",
    "langgraph (>=1.1.9,<2.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",

    "pypdf (>=5.0.0,<7.0.0)",
    "python-docx (>=1.1.0,<2.0.0)",
    "python-multipart (>=0.0.20,<1.0.0)",

    "httpx (>=0.28.0,<1.0.0)",
    "structlog (>=24.0.0,<26.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=0.25.0,<1.0.0)",
    "pytest-cov (>=6.0.0,<8.0.0)",
    "ruff (>=0.8.0,<1.0.0)",
    "mypy (>=1.14.0,<2.0.0)",
    "pre-commit (>=4.0.0,<5.0.0)",
    "httpx (>=0.28.0,<1.0.0)"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"